# inscore-service_send_message

./: .env  .gitignore  Dockerfile  Makefile  README.md  buildspec.yml  compose  config.py  main.py  pyproject.toml  requirements.txt
data_models/: connect_db.py  models.py
handlers/: evolution.py  scheduler_api.py  sellers_api.py
