[tool.poetry]
name = "service-send-message"
version = "0.1.0"
description = ""
authors = ["Junior Werner <juninhowerner31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettyconf = "^2.2.1"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
